<resources>
    <string name="app_name">SmartBin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="marker_label">SmartBin </string>
    <string name="fill_level_label">Fill Level :</string>
    <string name="humidity_label">Humidity :</string>
    <string name="location_label">Location :</string>
    <string name="search_hint">Location Name.. :</string>
    <string name="action_search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Export</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_settings_title">Set your SmartBin settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_radius">Radius</string>
    <string name="pref_radius_summary">Set the radius</string>
    <string name="pref_baseURL">Server URL</string>
    <string name="pref_baseURL_summary">Set the Server URL</string>

    <string name="pref_export_email">Email Address</string>
    <string name="pref_export_email_summary">Set your email address to send exports</string>
    <string name="pref_export_email_hint">name@server.com</string>
    <string name="pref_export_format">Export Format</string>
    <string name="pref_export_format_summary">Set your preferred export format</string>

    <string name="baseURL_default_value">http://10.134.5.158:8080/SmartBin</string>
    <string name="radius_default_value">10</string>
    <string name="admin_email_address">admin@smartbin.com</string>
    <string name="export_format_default">PDF</string>

</resources>
