<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    android:orientation="vertical"
    android:id="@+id/list_child" >


    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/marker_label"
        android:layout_alignParentLeft="true"
        android:textSize="15dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/BinId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/Heading"
        >
    </TextView>

    <TextView
        android:id="@+id/LocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/location_label"
        android:layout_below="@id/Heading"
        >
    </TextView>

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@id/Heading"
        android:layout_toRightOf="@id/LocationLabel"
        >
    </TextView>


    <TextView
        android:id="@+id/FillLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LocationLabel"
        android:text="@string/fill_level_label"
        android:textSize="15dp"
        >
    </TextView>
    <TextView
        android:id="@+id/FillLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Location"
        android:layout_toRightOf="@id/FillLevelLabel"
        android:textSize="15dp"
        >
    </TextView>

    <TextView
        android:id="@+id/HumidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/humidity_label"
        android:layout_below="@id/FillLevelLabel"
        >
    </TextView>


    <TextView
        android:id="@+id/Humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@id/FillLevel"
        android:layout_toRightOf="@id/HumidityLabel"
        >
    </TextView>


</RelativeLayout>